fixed animation and scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,3 +10,7 @@
 
     background-color: #1e272c;
 }
+
+*::-webkit-scrollbar {
+    display: none;
+}
