--- a/src/components/ChatContainer/components/Message/Message.scss
+++ b/src/components/ChatContainer/components/Message/Message.scss
@@ -13,7 +13,7 @@
 
     &.sent {
         text-align: right;
-        animation: messageIn .35s 1 ease-out forwards;
+        // animation: messageIn .35s 1 ease-out forwards;
 
         .text {
             display:inline-block;
